# advent_of_code

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/: base_day.rs  config.rs  dsu.rs  file.rs  graph.rs  grid.rs  lib.rs  test_utils.rs  utils.rs
data/2024/day_24/: example_3.txt  input_1.txt
templates/year-template/: Cargo.toml  cargo-generate.toml  day_template.rs.template.liquid  generate_days.py.liquid  post-script.rhai
templates/year-template/src/: bin.rs.liquid  main.rs.liquid
year2023/: Cargo.toml
year2023/src/: bin.rs  main.rs
year2024/: Cargo.toml  generate_files.py
year2024/data/day_15/: readme.md
year2024/data/day_16/: example_3.txt  example_4.txt
year2024/data/day_18/: example_2.txt
year2024/data/day_19/: example_2.txt
year2024/src/: bin.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs
